src/tests/snapshots/eventql_parser__tests__analysis__analyze_undeclared_variable_in_project_into_clause.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    VariableUndeclared:
      - 2
      - 14
      - f
