src/tests/snapshots/eventql_parser__tests__analysis__analyze_valid_agg_usage.snap
---
source: src/tests/analysis.rs
expression: "query.and_then(|q|\n{\n    q.run_static_analysis(&arena, &Default::default()).map(|q| q.view(&arena))\n})"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate: ~
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 2
        col: 14
    value:
      Record:
        - attrs:
            pos:
              line: 3
              col: 2
          name: sum
          value:
            attrs:
              pos:
                line: 3
                col: 7
            value:
              App:
                func: SUM
                args:
                  - attrs:
                      pos:
                        line: 3
                        col: 11
                    value:
                      Access:
                        target:
                          attrs:
                            pos:
                              line: 3
                              col: 11
                          value:
                            Access:
                              target:
                                attrs:
                                  pos:
                                    line: 3
                                    col: 11
                                value:
                                  Id: e
                              field: data
                        field: count
        - attrs:
            pos:
              line: 4
              col: 2
          name: label
          value:
            attrs:
              pos:
                line: 4
                col: 9
            value:
              String: everything summed
        - attrs:
            pos:
              line: 5
              col: 2
          name: randomvalue
          value:
            attrs:
              pos:
                line: 5
                col: 15
            value:
              App:
                func: RAND
                args: []
  distinct: false
  meta:
    project:
      Record:
        label: String
        randomvalue: Number
        sum: Number
    aggregate: true
