src/tests/snapshots/eventql_parser__tests__analysis__analyze_valid_contains.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate:
    attrs:
      pos:
        line: 2
        col: 7
    value:
      Binary:
        lhs:
          attrs:
            pos:
              line: 2
              col: 7
          value:
            Array:
              - attrs:
                  pos:
                    line: 2
                    col: 8
                value:
                  Number: 1
              - attrs:
                  pos:
                    line: 2
                    col: 10
                value:
                  Number: 2
              - attrs:
                  pos:
                    line: 2
                    col: 12
                value:
                  Number: 3
        operator: Contains
        rhs:
          attrs:
            pos:
              line: 2
              col: 24
          value:
            Access:
              target:
                attrs:
                  pos:
                    line: 2
                    col: 24
                value:
                  Access:
                    target:
                      attrs:
                        pos:
                          line: 2
                          col: 24
                      value:
                        Id: e
                    field: data
              field: price
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 3
        col: 14
    value:
      Id: e
  distinct: false
  meta:
    project:
      Record:
        data:
          Record:
            price: Number
        datacontenttype: String
        hash: String
        id: String
        predecessorhash: String
        signature: String
        source: String
        specversion: String
        subject: Subject
        time: DateTime
        traceparent: String
        tracestate: String
        type: String
    aggregate: false
