src/tests/snapshots/eventql_parser__tests__analysis__analyze_valid_type_conversion_custom_type.snap
---
source: src/tests/analysis.rs
expression: "query.and_then(|q|\n{\n    q.run_static_analysis(&arena,\n    &AnalysisOptions::default().add_custom_type(\"Foobar\"),).map(|q|\n    q.view(&arena))\n})"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate: ~
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 2
        col: 14
    value:
      Record:
        - attrs:
            pos:
              line: 2
              col: 16
          name: date
          value:
            attrs:
              pos:
                line: 2
                col: 22
            value:
              Binary:
                lhs:
                  attrs:
                    pos:
                      line: 2
                      col: 22
                  value:
                    Access:
                      target:
                        attrs:
                          pos:
                            line: 2
                            col: 22
                        value:
                          Access:
                            target:
                              attrs:
                                pos:
                                  line: 2
                                  col: 22
                              value:
                                Id: e
                            field: data
                      field: date
                operator: As
                rhs:
                  attrs:
                    pos:
                      line: 2
                      col: 37
                  value:
                    Id: Foobar
  distinct: false
  meta:
    project:
      Record:
        date:
          Custom: Foobar
    aggregate: false
