src/tests/snapshots/eventql_parser__tests__analysis__ids_in_group_by_should_pass.snap
---
source: src/tests/analysis.rs
expression: "query.and_then(|q|\n{ session.run_static_analysis(q).map(|q| q.view(&session.arena)) })"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: event_type
        pos:
          line: 1
          col: 6
      kind:
        Name: eventtypes
  predicate: ~
  group_by:
    expr:
      attrs:
        pos:
          line: 2
          col: 10
      value:
        Id: event_type
    predicate: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 3
        col: 14
    value:
      App:
        func: unique
        args:
          - attrs:
              pos:
                line: 3
                col: 21
            value:
              Id: event_type
  distinct: false
  meta:
    project: Unspecified
    aggregate: true
