src/tests/snapshots/eventql_parser__tests__analysis__project_event_decls.snap
---
source: src/tests/analysis.rs
expression: "query.and_then(|q|\n{ session.run_static_analysis(q).map(|q| q.view(&session.arena)) })"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: c
        pos:
          line: 1
          col: 6
      kind:
        Name: command_decls
  predicate: ~
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 2
        col: 14
    value:
      Access:
        target:
          attrs:
            pos:
              line: 2
              col: 14
          value:
            Access:
              target:
                attrs:
                  pos:
                    line: 2
                    col: 14
                value:
                  Id: c
              field: schema
        field: properties
  distinct: false
  meta:
    project: Unspecified
    aggregate: false
