src/tests/snapshots/eventql_parser__tests__analysis__reject_invalid_having_clause.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    ExpectAggExpr:
      - 2
      - 35
